syntax = "proto3";

import "product.proto";

message User {
    int32 id = 1;
    string name = 2;
    string username = 3;
    repeated Product products = 4;
}

service UserService {
    //TODO could add a status for inserting
    rpc AddItem (AddItemRequest) returns (User) {}
    rpc AddUser (User) returns (UserId) {}
    rpc GetUserById (UserId) returns (User) {}
    rpc GetAllUsers (GetAllRequest) returns (GetAllUsersResponse) {}
    rpc GetWishList (UserId) returns (ProductIds) {}
    rpc GetWishListWithDescription (UserId) returns (ProductsList) {}
    rpc GetPing (Ping) returns (Pong) {}
}

message AddItemRequest {
    int32 product = 1;
    int32 user = 2;
}

message GetAllUsersResponse {
    repeated User users = 1;
}

message UserId {
    int32 id = 1;
}


